# chaosify

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: run_coverage.yml  run_test.yml
chaosify/: __init__.py  check.py  main.py  wreck.py
tests/: test_chaos_decorator.py  test_check.py
