[tool.poetry]
name = "chaosify"
version = "0.1.0"
description = ""
authors = ["Yuriy Sannikov <yury.sannikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
