[tool.poetry]
name = "chaosify"
version = "0.1.1"
description = ""
authors = ["Yuriy Sannikov <yury.sannikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "*"
flake8 = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
coverage = "^7.5.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
